# hausgemachtspotipy

./: LICENSE  README.md  README.rst  pyproject.toml  test_hausgemachtSpotiPy.ipynb
dev/: Spotify_Scraper_01_SpotifyAPI_Auth.ipynb  Spotify_Scraper_02_Base_API_Client_Class.ipynb  Spotify_Scraper_03_Use_Access_Token.ipynb  Spotify_Scraper_04_Resource-Enabled_Client.ipynb  Spotify_Scraper_05_Robust_Query_Search.ipynb  Spotify_Scraper_06_Export_Client.ipynb  Spotify_Scraper_07_Import_Client.ipynb  Spotify_Scraper_08_Artist_Album_Tracks_Attributes.ipynb  hausgemachtSpotiPy.ipynb
hausgemachtspotipy/: __init__.py  hausgemachtSpotiPy.py
tests/: test_hausgemachtspotipy.py
