[tool.poetry]
name = "hausgemachtspotipy"
version = "0.1.4"
description = "Access music artists, albums, and tracks, directly from the Spotify Data Catalogue via Spotify Web API endpoints"
authors = ["Rich Leung <kleung.hkg@gmail.com>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.6.1"
DateTime = "^4.3"
requests = "^2.24.0"
pandas = "^1.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.4"
black = "^20.8b1"
ipykernel = "^5.3.4"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
